samples/_failures_safe/1761192855_e00f3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b45238c.c: In function ‘main’:
./samples/SAFE/__tmp_3b45238c.c:163:5: error: expected identifier or ‘(’ at end of input
  163 |     int
      |     ^~~
./samples/SAFE/__tmp_3b45238c.c:163:5: error: expected declaration or statement at end of input
